--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,48 +13,48 @@ permissions:
   contents: read
 
 jobs:
-#   linux:
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         platform:
-#           - runner: ubuntu-latest
-#             target: x86_64
-#           - runner: ubuntu-22.04
-#             target: x86_64
-#         python-version: ["3.11", "3.12", "3.13"]
-#     steps:
-#       - uses: actions/checkout@v4
-#       - uses: actions/setup-python@v5
-#         with:
-#           python-version: ${{ matrix.python-version }}
-#       - name: Build wheels
-#         uses: PyO3/maturin-action@v1
-#         with:
-#           target: ${{ matrix.platform.target }}
-#           args: --release --out dist -i python${{ matrix.python-version }}
-#           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-#           rustup-components: "rust-src rustc-dev llvm-tools"
-#           manylinux: auto
-#       - name: Upload wheels
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: wheels-linux-${{ matrix.platform.target }}}-py${{ matrix.python-version }}
-#           path: dist
-#       - name: Unit test
-#         shell: bash
-#         run: |
-#           set -e
-#           python3 -m venv .venv
-#           source .venv/bin/activate
-#           pip install tsdistances --find-links dist --force-reinstall
-#           pip install pytest
-#           pip install aeon
-#           pip install stumpy
-#           pytest -v tests/test_correctness_cpu.py
+  linux:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64
+          - runner: ubuntu-22.04
+            target: x86_64
+        python-version: ["3.11", "3.12", "3.13"]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -i python${{ matrix.python-version }}
+          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          rustup-components: "rust-src rustc-dev llvm-tools"
+          manylinux: auto
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-linux-${{ matrix.platform.target }}}-py${{ matrix.python-version }}
+          path: dist
+      - name: Unit test
+        shell: bash
+        run: |
+          set -e
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install tsdistances --find-links dist --force-reinstall
+          pip install pytest
+          pip install aeon
+          pip install stumpy
+          pytest -v tests/test_correctness_cpu.py
 
   macos:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         platform:
@@ -116,7 +116,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-    needs: [macos, sdist]
+    needs: [linux, macos, sdist]
     permissions:
       # Use to sign the release artifacts
       id-token: write
