--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   linux:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         platform:
@@ -48,13 +48,13 @@ jobs:
           python3 -m venv .venv
           source .venv/bin/activate
           pip install tsdistances --find-links dist --force-reinstall
-          pip install pytest
           pip install aeon
           pip install stumpy
+          pip install pytest
           pytest -v tests/test_correctness_cpu.py
 
   macos:
-    runs-on: macos-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         platform:
@@ -91,7 +91,7 @@ jobs:
           pytest -v tests/test_correctness_cpu.py
 
   sdist:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -107,7 +107,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
     needs: [linux, macos, sdist]
     permissions:
