--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
           pytest -v tests/test_correctness_cpu.py
 
   sdist:
-    runs-on: ${{ matrix.platform.runner }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -107,7 +107,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: ${{ matrix.platform.runner }}
+    runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
     needs: [linux, macos, sdist]
     permissions:
