--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@ cargo-features = ["edition2024"]
 
 [package]
 name = "tsdistances"
-version = "0.1.4"
+version = "0.1.5"
 description = "tsdistances is a Python library (with Rust backend) for computing various pairwise distances between sets of time series data."
 edition = "2024"
 authors = [
@@ -23,7 +23,7 @@ tsdistances_gpu = { git = "https://github.com/albertoazzari/tsdistances_gpu.git"
 
 [lib]
 crate-type = ["cdylib"]
-name = "tsdistances_rs"
+name = "tsdistances"
 
 [profile.release]
 lto = true
